--- a/static/index.html
+++ b/static/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; }
+    html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+    body { display: flex; flex-direction: column; }
     header { padding: 12px 16px; background:#f2f2f2; border-bottom:1px solid #ddd; }
-    .wrap { display:grid; grid-template-columns: 360px 1fr; gap:12px; padding:12px; }
-    .card { border:1px solid #e0e0e0; border-radius:12px; padding:12px; }
-    #map { width:100%; height: 640px; border-radius: 8px; }
+    .wrap { flex: 1; display:grid; grid-template-columns: 360px 1fr; gap:12px; padding:12px; overflow: hidden; }
+    .card { border:1px solid #e0e0e0; border-radius:12px; padding:12px; display: flex; flex-direction: column; }
+    #map { width:100%; height: 100%; border-radius: 8px; }
+    .map-container { flex: 1; }
     table { width:100%; border-collapse: collapse; }
     td, th { padding:6px; border-bottom: 1px solid #eee; font-size: 14px; }
     .btn { padding:8px 10px; border:1px solid #ccc; border-radius: 8px; background:#fff; cursor: pointer; }
@@ -40,7 +42,9 @@
       </table>
     </div>
     <div class="card">
-      <div id="map"></div>
+      <div class="map-container">
+        <div id="map"></div>
+      </div>
     </div>
   </div>
   <div class="foot">
